faltando apenas os 80% de cobertura de testes usando coverage